make a changes in portfolio-page

--- a/project/remedo.html
+++ b/project/remedo.html
@@ -46,6 +46,7 @@
   <link rel="stylesheet" href="../assets/css/answerbook-new.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/remedo.css">
+  <link rel="stylesheet" href="../assets/css/common-project.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -87,83 +88,82 @@
     </div>
   </div>
 
-  <section class="pd-hero-container">
-    <div class="container-fluid" style="height:100%;">
-      <div class="row remedo-row" style="height:100%">
-        <div class="col-md-4 col-sm-12 hero-col remedo-col"
-          style="display:flex;flex-direction:column;align-items:start;justify-content:center;padding-left:8rem">
-          <h1 class="pd-hero-title">Remedo</h1>
-          <p class="pd-hero-subtitle">Remedo (Smart Health Assistant)</p>
-        </div>
-        <div class="col-md-8 col-sm-12 remedo-col">
-          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../assets/projects/remedo/Remedo-Home-1.png" class="d-block w-100 remedo-hero-img" style="height: 50vh;">
-              </div>
-            </div>
-          </div>
-        </div>
+  <section class="hero-section remedo-project-page">
+    <div class="container">
+      <div class="project-name">
+        <h2>Remedo</h2>
+        <p>Remedo (Smart Health Assistant)</p>
       </div>
     </div>
   </section>
 
-  <!-- our work  ---->
+
   <section class="remedo-container">
     <div class="container text-center">
-      <div class="row gx-5 remedo-row">
-        <div class="col col-md-12 col-lg-6">
-          <div class="">
-            <h1 class="text-start mb-3 pd-about-title">
-              Idea</h1>
-            <p class="text-start pd-about-text remedo-about">Study shows that one in every five Indians is affected by chronic disease. Around 60% of deaths is due to non-communicable diseases. Patient's nowadays have lot of questions and they expect more than prescriptions. With the rise of complex conditions integrated care is in need by the market. Remedo wanted to build an engagement platform that drives the better patient connect throughout their care journey well beyond the clinic visit. Remedo wanted to create a smart platform which connects doctors and patients throughout their care journey. Remedo also wanted to provide personalized care plans according to patient's condition.  This is when Remedo selected Code Symphony as a technology partner to help them address their needs with an efficient IT solution.</p>
+      <div class="row answerbook-row gx-5">
+        <div class="col">
+          <div class="text-start">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="Duration">
+                  <h2 class="duration-title common-title"><i class="fa-sharp fa-regular fa-clock"></i>Duration</h2>
+                  <div class="duration-info d-flex mt-1">
+                    <p class="common-badge">January 2020 - Present</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="Client">
+                  <h2 class="Client-title common-title"><i class="fa-sharp fa-solid fa-user-tie"></i>Client</h2>
+                  <div class="Client-info d-flex mt-1">
+                    <p class="common-badge">Remedo (Smart Health Assistant)</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa-sharp fa-solid fa-globe"></i>Platform</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">IOS / Android</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>Location</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">India</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="technologies mt-1">
+                  <h2 class="technology-title common-title"><i class="fa-solid fa-code"></i>Technologies</h2>
+                  <div class="technologie-info d-flex mt-1">
+                    <p class="common-badge">React Native, Spring boot, Angular, Jenkins</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col">
-          <div class=" text-start">
-            <div class="Duration">
-              <h2 class="duration-title">Duration</h2>
-              <div class="duration-info d-flex mt-1">
-                <p style="margin-right:10px;">January 2020 - Present</p>
-              </div>
-            </div>
-            <div class="Client">
-              <h2 class="Client-title">Client</h2>
-              <div class="Client-info d-flex mt-1">
-                <p style="margin-right:10px;">Remedo (Smart Health Assistant)</p>
-              </div>
-            </div>
-            <div class="Location">
-              <h2 class="Location-title">Location</h2>
-              <div class="Location-info d-flex mt-1">
-                <p style="margin-right:10px;">India</p>
-              </div>
-            </div>
-            <div class="platform">
-              <h2 class="platform-title">Platform</h2>
-              <div class="platform-info d-flex mt-1">
-                <p style="margin-right:10px;">IOS</p>
-                <p>Android</p>
-              </div>
-            </div>
-            <div class="technologies mt-1">
-              <h2 class="technology-title">Technologies</h2>
-              <div class="technologie-info d-flex mt-1">
-                <p>React native</p>
-                <p>Spring boot</p>
-                <p>Angular</p>
-                <p>Jenkins</p>
-              </div>
-            </div>
+        <div class="col col-md-12 col-lg-6">
+          <div class="">
+            <h2 class="text-start mb-3 pd-about-title">Idea</h2>
+            <p class="text-start pd-about-text eccocar-about eccocar-sm-font">
+              Study shows that one in every five Indians is affected by chronic disease. Around 60% of deaths is due to non-communicable diseases. Patient's nowadays have lot of questions and they expect more than prescriptions. With the rise of complex conditions integrated care is in need by the market. Remedo wanted to build an engagement platform that drives the better patient connect throughout their care journey well beyond the clinic visit. Remedo wanted to create a smart platform which connects doctors and patients throughout their care journey. Remedo also wanted to provide personalized care plans according to patient's condition.  This is when Remedo selected Code Symphony as a technology partner to help them address their needs with an efficient IT solution.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+ 
 
-  <section style="background-color:#3F3B3B;">
+  <section class="project-detials">
     <div class="px-4 key-feature-container ">
-      <div class="row gx-5 feature-row">
+      <div class="row gx-5 feature-row align-items-center">
         <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="p-3">
             <div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel"
@@ -209,7 +209,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 text-start">
           <div class="p-3 text-start">
-            <h2 class="features-container-title" style="color: #FEB062;">Remedo Doctor's App</h2>
+            <h2 class="features-container-title">Remedo Doctor's App</h2>
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center mt-3">
                 <div class="feature-heading text-white remedo-para">
@@ -219,9 +219,6 @@
             </div>
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/remedo/icons/appointment.png" class="remedo-icon">
-                </div>
                 <div class="feature-heading text-white">
                   Set an appointment with the patient
                 </div>
@@ -229,9 +226,6 @@
             </div>
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/remedo/icons/Personal info.png" class="remedo-icon">
-                </div>
                 <div class="feature-heading text-white">
                   Manage patient's information (Personal info, prescriptions, reports ) 
                 </div>
@@ -239,9 +233,6 @@
             </div>
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/remedo/icons/Services.png" class="remedo-icon">
-                </div>
                 <div class="feature-heading text-white">
                   Add Services to offer
                 </div>
@@ -249,9 +240,6 @@
             </div>
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/remedo/icons/timeslots.png" class="remedo-icon">
-                </div>
                 <div class="feature-heading text-white">
                   Add timeslots
                 </div>
@@ -259,9 +247,6 @@
             </div>
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/remedo/icons/billing.png" class="remedo-icon">
-                </div>
                 <div class="feature-heading text-white">
                   Manage Billings
                 </div>
@@ -273,9 +258,9 @@
     </div>
   </section>
 
-  <section style="background-color:#3F3B3B; margin-top: -1px;">
+  <section class="project-detials">
     <div class="px-4 key-feature-container ">
-      <div class="row gx-5 feature-row">
+      <div class="row gx-5 feature-row align-items-center">
         <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="p-3">
             <div id="carouselExampleControls-2" class="carousel slide" data-bs-ride="carousel"
@@ -321,7 +306,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 text-start">
           <div class="p-3 text-start">
-            <h2 class="features-container-title" style="color: #FEB062;">Provide Care Plans </h2>
+            <h2 class="features-container-title">Provide Care Plans </h2>
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center mt-3">
                 <div class="feature-heading text-white remedo-para">
