add portfolio-block design with hover effect

--- a/work.html
+++ b/work.html
@@ -92,6 +92,68 @@
       <h1>Our Work</h1>
     </div>
 
+
+    <div class="work-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-5">
+            <a href="">
+            <div class="card">
+              <div class="image-part">
+                <img src="./assets/projects/answerbook/answerbook.webp" alt="portfolio-image" />
+                <div class="hover-block">
+                  <div class="content-part">
+                  <h2>Answerbook</h2>
+                  <p>Code Symphony helped Answerbook (South Korean educational startup) in building this platform which can be used by students to learn something out of the syllabus. The app has two main functions:</p>
+                  <div class="plate-form">
+                    <h6>Platform :</h6>
+                    <div class="web">
+                    <img src="./assets/technology/web.png" class="www-icon inverted"/>
+                    </div>
+                    <div class="mobile">
+                    <img src="./assets/technology/mobile.png" class="mobile inverted"/>
+                    </div>
+                  </div>
+                  <div class="technlogy-name">
+                    <div class="icon">
+                      <img src="./assets/technology/nextJs.png" alt="nextJs">
+                      <p>NextjS</p>
+                    </div>
+                    <div class="icon">
+                      <img src="./assets/technology/node.png" alt="nodeJs">
+                      <p>NodejS</p>
+                    </div>
+                    <div class="icon">
+                      <img src="./assets/technology/parse.png" alt="ParseServer">
+                      <p>ParseServer</p>
+                    </div>
+                    <div class="icon">
+                      <img src="./assets/technology/PostgreSQL.png" alt="PostgreSQL">
+                      <p>PostgreSQL</p>
+                    </div>
+                    <div class="icon">
+                      <img src="./assets/technology/reactNative.png" alt="React-Native">
+                      <p>React Native</p>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </a>
+          </div>
+          <div class="col-md-5">
+            <div class="card">
+              <div class="image-part">
+                <img src="./assets/projects/answerbook/answerbook.webp" alt="portfolio-image" />
+                <div class="hover-block"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="work d-flex justify-content-evenly mt-5">
       <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
         <h1 class="text-white mt-1" style="font-size: 25px;">Answerbook</h1>
