make home page and hover effect on card

--- a/work.html
+++ b/work.html
@@ -97,13 +97,75 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-5">
+            <article class="card">
+              <div class="thumb"></div>
+              <div class="infos">
+                <h2 class="title">Eccocar</h2>
+                <p class="txt">
+                  Code Symphony helped Answerbook (South Korean educational startup) in building this platform which can be used by students to learn something out of the syllabus. The app has two main functions:
+                </p>
+                <div class="plate-form">
+                  <h6>Platform :</h6>
+                  <div class="web">
+                  <img src="./assets/technology/web.png" class="www-icon inverted"/>
+                  </div>
+                  <div class="mobile">
+                  <img src="./assets/technology/mobile.png" class="mobile inverted"/>
+                  </div>
+                </div>
+                <div class="technlogy-name">
+                  <div class="icon">
+                    <img src="./assets/technology/nextJs.png" alt="nextJs">
+                    <p>NextjS</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/node.png" alt="nodeJs">
+                    <p>NodejS</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/parse.png" alt="ParseServer">
+                    <p>ParseServer</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/PostgreSQL.png" alt="PostgreSQL">
+                    <p>PostgreSQL</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/reactNative.png" alt="React-Native">
+                    <p>React Native</p>
+                  </div>
+                </div>
+                <a href="">
+                  <h3 class="details">Read More</h3>
+                </a>
+              </div>
+            </article>
+          </div>
+          <!-- <div class="col-md-5">
+            <article class="card">
+              <div class="thumb"></div>
+              <div class="infos">
+                <h2 class="title">new york city<span class="flag"></span></h2>
+                <h3 class="date">november 2 - 4</h3>
+                <h3 class="seats">seats remaining: 2</h3>
+                <p class="txt">
+                  Join us for our Live Infinity Session in
+                  beautiful New York City. This is a 3 day
+                  intensive workshop where you'll learn
+                  how to become a better version of...
+                </p>
+                <h3 class="details">event details</h3>
+              </div>
+            </article>
+          </div> -->
+          <!-- <div class="col-md-5">
             <a href="">
             <div class="card">
               <div class="image-part">
-                <img src="./assets/projects/answerbook/answerbook.webp" alt="portfolio-image" />
+                <img src="./assets/projects/project1.png" alt="portfolio-image" />
                 <div class="hover-block">
                   <div class="content-part">
-                  <h2>Answerbook</h2>
+                  <h2>Eccocar</h2>
                   <p>Code Symphony helped Answerbook (South Korean educational startup) in building this platform which can be used by students to learn something out of the syllabus. The app has two main functions:</p>
                   <div class="plate-form">
                     <h6>Platform :</h6>
@@ -138,6 +200,7 @@
                   </div>
                   </div>
                 </div>
+                <div class="project-name">Eccocar</div>
               </div>
             </div>
             </a>
@@ -149,293 +212,12 @@
                 <div class="hover-block"></div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
 
-    <div class="work d-flex justify-content-evenly mt-5">
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">Answerbook</h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content" style="width:400px;">Code Symphony helped Answerbook (South Korean educational
-            startup) in building
-            this
-            platform which can be
-            used by students to learn something out of the syllabus. The app has two main functions:</p>
-        </div>
-        <div class="work-info mt-1  justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">Web, Mobile</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">Education</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/answerbook.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-
-
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-          Bluebird</h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content mt-3" style="width:400px;">Choose from 11,000,000 pre-recorded lessons or create a
-            truly personalized course that revolves around the things you love.</p>
-        </div>
-        <div class="work-info mt-1 justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">Mobile</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">Education</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/bluebird.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="work d-flex justify-content-evenly mt-5">
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-          Bryllance</h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content mt-3" style="width:400px;">Bryllance is aiming to help freelancers offering personalised
-            services source for freelance jobs opportunities and grow their business.</p>
-        </div>
-        <div class="work-info mt-1  justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">Mobile</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">freelancing</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/bryllance.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-
-
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-          Compose</h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content" style="width:400px;">Compose is a solution to aid users in writing various types of
-            literary pieces like memoirs, journals, explorations and display their creativity by providing prompts to
-            write on.</p>
-        </div>
-        <div class="work-info mt-1 justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">Web, Mobile</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">Content Writer</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/compose.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="work d-flex justify-content-evenly mt-5">
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-
-          EccoCar</h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content" style="width:400px;">Sustainable value in work is something that moves Eccocar every
-            day, the perspective of mobility on demand, communication and connection between mobility platforms and
-            users.</p>
-        </div>
-        <div class="work-info mt-1  justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">Web, Ios, Android</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">Car Bussines</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/eccocar.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-
-
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-
-          Noob Storm</h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content" style="width:400px;">Noob Storm is a perfect platform for gaming freaks. Noob Storm
-            provides a platform for gamers to put their gaming skills into the test against other gamers and utilise
-            these skills to earn rewards.</p>
-        </div>
-        <div class="work-info mt-1 justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">
-              Frontend , Backend</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">
-              Gaming</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/noobstrom.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="work d-flex justify-content-evenly mt-5">
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-
-          Petaments
-        </h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content mt-3" style="width:400px;">Together with vets, nutritionists and dog owners Petaments have
-            spent a lot of time to better understand which health issues are most common in dogs and how overall life
-            quality can be improved with the right nutrition.</p>
-        </div>
-        <div class="work-info mt-1  justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">Web</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">Animal</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/petaments.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-
-
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-
-          Pipeline
-        </h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content" style="width:400px;">Pipeline wanted to build something more than just software.
-            Pipeline wanted to help people in video production industry by providing them a platform where they can
-            produce projects more easily, effectively, and with better collaboration than ever before.</p>
-        </div>
-        <div class="work-info mt-1 justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">
-              Web</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">
-              Video Production</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/pipeline.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="work d-flex justify-content-evenly mt-5">
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-
-          Remedo
-        </h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content" style="width:400px;">Idea Study shows that one in every five Indians is affected by
-            chronic disease. Around 60% of deaths is due to non-communicable diseases. Patient's nowadays have lot of
-            questions and they expect more than prescriptions.</p>
-        </div>
-        <div class="work-info mt-1  justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">IOS, Android</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">Doctor's</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/remedo.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-
-
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-
-          Shopout
-        </h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content mt-5" style="width:400px;">Shopout is the new revolution in shopping. Providing a whole new
-            experience of shopping from home is what fuels Shopout.</p>
-        </div>
-        <div class="work-info mt-1 justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">
-              Web, Mobile</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">
-              Shopping</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/Shopout.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="work d-flex justify-content-evenly mt-5">
-      <div class="work-box p-3 border bg-dark rounded-3 text-center" style="width: 450px;">
-        <h1 class="text-white mt-1" style="font-size: 25px;">
-
-          Sonetel
-        </h1>
-        <div class="work-center d-flex justify-content-center">
-          <p class="work-content" style="width:400px;">We are a Global Solution. We believe in everyone’s right to make
-            the most of their lives, regardless of nationality, faith, Color of skin or gender. Over 2 million
-            businesses have signed up for our services across the years. 180 000 of these have become paying customers.
-          </p>
-        </div>
-        <div class="work-info mt-1  justify-content-between">
-          <div class="work-contain-left">
-            <p class="work-details text-white">Expertise Delivered</p>
-            <p class="work-details">Mobile</p>
-          </div>
-          <div class="work-contain-left">
-            <p class="work-details text-white mt-1">Category</p>
-            <p class="work-details">Mobile Industry</p>
-          </div>
-        </div>
-        <div class="work-link mt-4 d-flex justify-content-center">
-          <a href="project/Sonetel.html">Read More <i class="fa-sharp ms-2 fa-solid fa-arrow-right"></i></a>
-        </div>
-      </div>
-
-    </div>
+    
   </section>
 
 
