--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
     <!-- Our Services  ---->
     <div class="Our-Services" id="main-services" style="background-color: #0e0d0d;">
-      <div class="service-heding pt-5 d-flex text-white justify-content-center flex-column align-items-center">
+      <div class="service-heding d-flex text-white justify-content-center flex-column align-items-center">
         <h1>Our Services</h1>
         <div class="service-sub-heading mt-2">We are technology agnostic and build products that last.
         </div>
@@ -211,7 +211,45 @@
 
       <div class="container overflow-hidden text-center">
         <div class="row service-main-row gy-5 mt-4 mb-4">
-
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="p-3 services-cards d-flex rounded-3">
+              <div class="services-left">
+                <div class="services-logo">
+                  <img src="assets/icons/services/Mobile-Dev.png" width="40px" class="service-icon-img" />
+                  <h4 class="text-left ">UI/UX</h4>
+                </div>
+                <p class="mt-2">Involves specialized professionals design and enhance user interfaces and experiences for digital products, utilizing tools such as user research, wireframing, visual design, and user testing.</p>
+                <div class="service-link d-flex">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="p-3 services-cards d-flex rounded-3">
+              <div class="services-left">
+                <div class="services-logo">
+                  <img src="assets/icons/services/Mobile-Dev.png" width="40px" class="service-icon-img" />
+                  <h4 class="text-left ">Wireframing</h4>
+                </div>
+                <p class="mt-2">creating a visual representation of a website, app, or software interface that outlines its basic structure and functionality. It serves as a blueprint for the final design and helps identify potential usability issues early in the design process.</p>
+                <div class="service-link d-flex">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="p-3 services-cards d-flex rounded-3">
+              <div class="services-left">
+                <div class="services-logo">
+                  <img src="assets/icons/services/Mobile-Dev.png" width="40px" class="service-icon-img" />
+                  <h4 class="text-left ">Analysis</h4>
+                </div>
+                <p class="mt-2">Involves evaluating user behavior and feedback to identify patterns, trends, and insights that inform the design and optimization of digital products. It typically involves the use of analytics tools and techniques, such as heatmaps, A/B testing, and user surveys.</p>
+                <div class="service-link d-flex">
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-6 col-md-12 col-sm-12">
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
@@ -285,14 +323,27 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="p-3 services-cards d-flex rounded-3">
+              <div class="services-left">
+                <div class="services-logo">
+                  <img src="assets/icons/services/users.png" width="40px" class="service-icon-img" />
+                  <h4 class="text-left">Testing</h4>
+                </div>
+                <p class="mt-2">Assessing the usability and effectiveness of a digital product through various methods, such as user testing, usability testing, and quality assurance testing. The goal is to identify and resolve any usability issues before launching the product to the market.</p>
+                <div class="service-link d-flex">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- portfolio section  ----->
-    <section style="background-color:#fff" id="main-portfolio">
+    <section class="portfolio-section" id="main-portfolio">
       <div class="portfolio-heading d-flex justify-content-center">
-        <h1 class="portfolio-heading">Our Portfolio</h1>
+        <h1 class="portfolio-heading">Featured Projects</h1>
       </div>
       <div class="container">
       <div class="row justify-content-center">
@@ -300,7 +351,7 @@
           <div class="portfolio-item-card">
             <div class="portfolio-image">
               <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project.png" alt="...">
+                <img src="assets/projects/project1.png" alt="...">
               </a>
             </div>
             <div class="portfolio-name">
@@ -313,7 +364,7 @@
           <div class="portfolio-item-card">
             <div class="portfolio-image">
               <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project2.png" alt="...">
+                <img src="assets/projects/project12.png" alt="...">
               </a>
             </div>
             <div class="portfolio-name">
@@ -326,221 +377,16 @@
           <div class="portfolio-item-card">
             <div class="portfolio-image">
               <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project3.png" alt="...">
+                <img src="assets/projects/project13.png" alt="...">
               </a>
             </div>
             <div class="portfolio-name">
-              <h5>Eccocar</h5>
-              <!-- <p>Pipeline (Transforming Video Production Industry)</p> -->
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-md-6 col-12 odd-even">
-          <div class="portfolio-item-card">
-            <div class="portfolio-image">
-              <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project4.png" alt="...">
-              </a>
-            </div>
-            <div class="portfolio-name">
-              <h5>Sonetel</h5>
-              <!-- <p>Pipeline (Transforming Video Production Industry)</p> -->
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-md-6 col-12 odd-even">
-          <div class="portfolio-item-card">
-            <div class="portfolio-image">
-              <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project5.png" alt="...">
-              </a>
-            </div>
-            <div class="portfolio-name">
-              <h5>Bluebird</h5>
+              <h5>Remedo</h5>
               <!-- <p>Pipeline (Transforming Video Production Industry)</p> -->
             </div>
           </div>
         </div>
       </div>
-      </div>
-      <div class="portfolio-row d-flex justify-content-evenly" style="margin-top:10px;flex-wrap:wrap">
-        <div class="main-card" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;background-color: #fff;">
-          <div class="portfolio-cards d-flex justify-content-center align-items-center portfolio-card-style">
-            <div class="card-1" style="width: 400px; height: 400px;">
-              <div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel"
-                style="display: flex;justify-content: center;">
-                <div class="carousel-inner" style="height:400px;width:200px ">
-                  <div class="carousel-item active" style="height:400px;width:200px">
-                    <img src="assets/answerbook.1.jpg" style="height:400px;width:200px" alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/answerbook.2.jpg" style="height:400px;width:200px" alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/answerbook.3.jpg" style="height:400px;width:200px" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-1"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-1"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            </div>
-          </div>
-          <a href="project/answerbook.html">
-            <div class="portfolio-details d-flex justify-content-center align-items-center flex-column"
-              style="width:450px;height:100px">
-              <div class="card-heading">
-                <span class="portfolio-project-title">ANSWERBOOK</span>
-              </div>
-              <div class="card-details">
-                <span class="portfolio-project-subtitle">Case Study, Education, Web App</span>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="main-card" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;background-color:#fff;">
-          <div class="portfolio-cards d-flex justify-content-center align-items-center portfolio-card-style">
-            <div class="card-1" style="width: 400px; height: 400px;">
-              <div id="carouselExampleControls-2" class="carousel slide" data-bs-ride="carousel"
-                style="display: flex;justify-content: center;">
-                <div class="carousel-inner" style="height:400px;width:200px ">
-                  <div class="carousel-item active" style="height:400px;width:200px">
-                    <img src="assets/projects/bryllance/Bryllance_5.png" style="height:400px;width:200px" alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/projects/bryllance/Bryllance_6.png" style="height:400px;width:200px" alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/projects/bryllance/Bryllance_7.png" style="height:400px;width:200px" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-2"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-2"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            </div>
-          </div>
-          <a href="project/bryllance.html">
-            <div class="portfolio-details d-flex justify-content-center align-items-center flex-column"
-              style="width:450px; height:100px">
-              <div class="card-heading">
-                <span class="portfolio-project-title">Bryllance</span>
-              </div>
-              <div class="card-details">
-                <span class="portfolio-project-subtitle">Tuition Teacher, Music Teacher, Fitness instructor/Coach,
-                  Photographer/Videographer</span>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="portfolio-row d-flex justify-content-evenly"
-        style="margin-top:60px;margin-bottom: 50px;flex-wrap:wrap">
-        <div class="main-card" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;background-color:#fff;">
-          <div class="portfolio-cards d-flex justify-content-center align-items-center portfolio-card-style">
-            <div class="card-1" style="width: 400px; height: 400px;">
-              <div id="carouselExampleControls-3" class="carousel slide" data-bs-ride="carousel"
-                style="display: flex;justify-content: center;">
-                <div class="carousel-inner" style="height:400px;width:200px ">
-                  <div class="carousel-item active" style="height:400px;width:200px">
-                    <img src="assets/projects/remedo/Add-Services.png" style="height:400px;width:200px" alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/projects/remedo/Billing-PaymentDetails.png" style="height:400px;width:200px"
-                      alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/projects/remedo/Details-Submitted.png" style="height:400px;width:200px" alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/projects/remedo/Subscribed-care-plans.png" style="height:400px;width:200px"
-                      alt="...">
-                  </div>
-                  <div class="carousel-item" style="height:400px;width:200px">
-                    <img src="assets/projects/remedo/Setup-Rx-Signature.png" style="height:400px;width:200px" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-3"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-3"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-
-            </div>
-          </div>
-          <a href="project/remedo.html">
-            <div class="portfolio-details d-flex justify-content-center align-items-center flex-column"
-              style="width:450px; height:100px">
-              <div class="card-heading">
-                <span class="portfolio-project-title">REMEDO</span>
-              </div>
-              <div class="card-details">
-                <span class="portfolio-project-subtitle">Remedo (Smart Health Assistant)</span>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="main-card" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;background-color:#fff;">
-          <div class="portfolio-cards d-flex justify-content-center align-items-center portfolio-card-style">
-            <div class="card-1 d-flex align-items-center" style="width: 400px; height: 400px;">
-              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="assets/projects/pipeline/Pipeline Dashboard.png" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/projects/pipeline/Pipeline Desktop.png" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/projects/pipeline/Project Day.png" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                  data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                  data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-
-            </div>
-          </div>
-          <a href="project/pipeline.html">
-            <div class="portfolio-details d-flex justify-content-center align-items-center flex-column"
-              style="width:450px; height:100px">
-              <div class="card-heading">
-                <span class="portfolio-project-title">PIPELINE</span>
-              </div>
-              <div class="card-details">
-                <span class="portfolio-project-subtitle">Pipeline (Transforming Video Production Industry)</span>
-              </div>
-            </div>
-          </a>
-        </div>
       </div>
       <div class="portfolio-view-more-container">
         <a href="work.html" class="portfolio-view-more">View More <i class="fa-sharp fa-solid fa-arrow-right"></i></a>
@@ -548,7 +394,7 @@
     </section>
 
     <!-- Our Trusted Clients -->
-    <section class="our-clients" style="background-color: black;">
+    <section class="our-clients client-section">
       <h1 class="text-white text-center pt-4">Our Trusted Clients</h1>
       <div id="clientcarousel" class="carousel slide" data-bs-ride="true">
         <div class="carousel-indicators">
